--- a/clase02/shopping-cart/angular.json
+++ b/clase02/shopping-cart/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "skipTests": true
         }
       },
       "root": "",
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "de24b5a9-47ad-412d-bb5f-64294ec10bd1"
   }
 }
